@@ -5,5 +5,6 @@ function POST() { adenosine POST "$@" }
 function PUT() { adenosine PUT "$@" }
 function DELETE() { adenosine DELETE "$@" }
 function TRACE() { adenosine TRACE "$@" }
+function PATCH() { adenosine PATCH "$@" }
 
 export PATH="$PATH:$(cd $(dirname $0) && pwd)/bin"
